romenno/Project-001-Roman-Numerals-Converter/roman-numeral_template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP and SSH for secure connection.  # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b5eea76982371e91        # ???
      InstanceType: t2.micro
      KeyName: first-key                    # ???
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup       # ???
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
            yum update -y
            yum install python3 -y
            pip3 install flask
            yum install git -y
            cd /home/ec2-user
            wget -P templates https://raw.githubusercontent.com/T-012239-huseyin/my-projects/main/romenno/Project-001-Roman-Numerals-Converter/templates/index.html
            wget -P templates https://raw.githubusercontent.com/T-012239-huseyin/my-projects/main/romenno/Project-001-Roman-Numerals-Converter/templates/result.html
            wget https://raw.githubusercontent.com/T-012239-huseyin/my-projects/main/romenno/Project-001-Roman-Numerals-Converter/app.py
            python3 app.py   

Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
